Fixed audio player by setting position and z-index

--- a/style.css
+++ b/style.css
@@ -128,3 +128,9 @@ a {
 a:hover {
   filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.9));
 }
+
+
+#cancion{
+  z-index:9999;
+  position: relative;
+}
